--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -11,24 +11,20 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 align-items-center">
-          <div class="col-lg-6 order-2 order-lg-1">
+          <div class="col-3"></div>
+          <div class="col-lg-6">
             <div class="hero-content">
               <h1 data-aos="fade-up" data-aos-delay="200">Hello, I'm <span class="highlight">Tanveer Ahmad</span></h1>
               <h2 data-aos="fade-up" data-aos-delay="1000">Creative <span class="typed" data-typed-items="Personalized Gift Creator, Graphic Designer"></span></h2>
               <p data-aos="fade-up" data-aos-delay="400">A Personalized Gift Designer and Creative Graphic Designer who crafts unique, custom-made gifts and visually compelling designs, tailored to individual preferences, occasions and branding needs, blending creativity with high-quality craftsmanship.</p>
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="500">
-                <a href="portfolio.html" class="btn btn-primary">View My Work</a>
+                <a href="/gallery" class="btn btn-primary">View My Work</a>
                 <a href="/contact" class="btn btn-outline">Get In Touch</a>
-              </div>
-              <div class="social-links" data-aos="fade-up" data-aos-delay="600">
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="bi bi-dribbble"></i></a>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 order-1 order-lg-2">
+          <div class="col-3"></div>
+          <!-- <div class="col-lg-6 order-1 order-lg-2">
             <div class="hero-image" data-aos="zoom-in" data-aos-delay="300">
               <div class="image-wrapper">
                 <img src="static/assets/img/profile/profile-square-11.webp" alt="Sarah Mitchell" class="img-fluid">
@@ -48,7 +44,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </div>
