--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -19,9 +19,9 @@
         </div>
         <div class="hero-actions aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
             {% if user.is_authenticated %}
-                <a href="/logout_user" class="btn btn-outline-light">Logout</a>
+                <a href="/logout_user" class="btn btn-outline-dark">Logout</a>
             {% else %}
-                <a href="/login" class="btn btn-outline-light">Login</a>
+                <a href="/login" class="btn btn-outline-dark">Login</a>
             {% endif %}
         </div>
 
