--- a/templates/public/about.html
+++ b/templates/public/about.html
@@ -16,7 +16,7 @@
 
         <!-- Intro + Photo -->
         <div class="row align-items-center justify-content-between gy-5 mb-5">
-          <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
+          <div class="col-lg-8" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
               <h2 class="headline">Hi, I'm Tanveer Ahmad</h2>
@@ -25,18 +25,13 @@
               </p>
 
               <div class="cta-group">
-                <a href="#portfolio" class="btn-ghost">
+                <a href="gallery" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
-            <figure class="profile-figure text-center text-lg-end">
-              <img src="static/assets/img/profile/profile-square-11.webp" alt="Portrait of Alex" class="img-fluid profile-photo">
-            </figure>
-          </div>
         </div>
         <!-- End Intro + Photo -->
 
