--- a/templates/public/login.html
+++ b/templates/public/login.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="col-12 text-center">
-                  <button type="submit" class="btn btn-outline-light">Login</button>
+                  <button type="submit" class="btn btn-outline-dark">Login</button>
                 </div>
 
               </div>
