--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -6,6 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="description" content="">
   <meta name="keywords" content="">
+  <title>Ansari Graphics - Personalized Gift Creator & Creative Graphic Designer</title>
 
   <!-- Favicons -->
   <link href="static/assets/img/favicon.png" rel="icon">
