--- a/templates/public/services.html
+++ b/templates/public/services.html
@@ -23,7 +23,7 @@
 
       <div class="row justify-content-center g-5">
         {% for service in all_services %}
-        <div class="col-md-6" data-aos="fade-right" data-aos-delay="100">
+        <div class="col-md-6 skill-item" data-aos="fade-right" data-aos-delay="100">
           <div class="service-item">
             <div class="service-icon">
               <i class="{{service.icon}}"></i>
